# stellar-pq

./: LICENSE  README.md
contracts/soroban-falcon-smart-account/: .contract-id-testnet  .deployment-testnet.json  Cargo.toml  README.md  deploy.sh
contracts/soroban-falcon-smart-account/src/: lib.rs  ntt.rs  verify.rs
contracts/soroban-falcon-smart-account/test_snapshots/: benchmark_smart_account_deployment.1.json  test_smart_account_constructor.1.json
contracts/soroban-falcon-smart-account/test_snapshots/test/: test_constructor_and_get_pubkey.1.json
contracts/soroban-falcon-smart-account/tests/: benchmark.rs  integration.rs  kat.rs
contracts/soroban-falcon-smart-account/tests/fixtures/: test_pubkey.hex  test_signature.hex
contracts/soroban-falcon-verifier/: .contract-id-testnet  Cargo.toml  README.md  deploy.sh
contracts/soroban-falcon-verifier/examples/: verify_testnet.sh
contracts/soroban-falcon-verifier/src/: lib.rs  verify.rs
contracts/soroban-falcon-verifier/tests/: benchmark.rs  integration.rs  kat.rs  soroban_sign.py
contracts/soroban-falcon-verifier/tests/fixtures/: test_pubkey.hex
web-demo/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web-demo/src/: App.tsx  main.tsx
web-demo/src/components/shared/: Footer.tsx  Header.tsx  KeyGenerator.tsx  StepCard.tsx
web-demo/src/lib/: falcon.ts  utils.ts
web-demo/src/pages/: Home.tsx  SmartAccountDemo.tsx  VerifierDemo.tsx
web-demo/src/styles/: globals.css
(+7 files in other folders)
