[package]
name = "soroban-falcon-verifier"
version = "0.1.0"
edition = "2021"
publish = false
description = "Pure-Rust Falcon-512 signature verifier for Soroban smart contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "23.4.0"
sha3 = { version = "0.10.8", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "23.4.0", features = ["testutils"] }
hex = "0.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
